syntax = "proto3";

option go_package = "github.com/nichol20/rhythmicity/data-api/internal/pb";

message PlaybackRequest {
    string id = 1;
}

message PlaybackResponse {
    string youtubeId = 1;
}

service Track {
    rpc Playback(PlaybackRequest) returns (PlaybackResponse) {};
}